@@ -1,5 +1,9 @@
 1999-04-10  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* automake.in (lang_yacc_finish): Generate and dist a `.h' for a
+	`.y' iff YFLAGS or AM_YFLAGS contain `-d'.
+	Reported by Jim Meyering <meyering@ascend.com>
+
 	* automake.in (lang_yacc_finish): $hname must not contain a `.'.
 
 1999-04-10  Tom Tromey  <tromey@cygnus.com>
